--- a/src/App.css
+++ b/src/App.css
@@ -1945,4 +1945,100 @@ h3 {
     border-color: #000;
 }
 
+.shipping-method{
+    width: 100%;
+    padding: 48px 160px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.shipping-method-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 592px;
+    justify-content: space-between;
+}
+
+.shipping-block{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 304px;
+    justify-content: space-between;
+}
+.shipping-radio-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 248px;
+}
+.shipping-buttons{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    gap: 23px;
+}
+
 /* - PAYMENT PAGES FINISH - */
+
+
+/* - USER LOGİN + REGİSTER START - */
+
+.register-input{
+    gap: 8px;
+}
+
+.register-input input{
+    width: 300px;
+    padding: 4px 12px;
+    outline: none;
+    font-weight: 100;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 0.5px solid #dbdbdb;
+}
+
+.register-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 24px;
+    margin-top: 16px;
+}
+
+.register-text span{
+    font-size: 12px;
+    font-weight: 200;
+    color: #7b7b7b;
+}
+
+.register-container button{
+    padding: 8px 100px;
+    background: #000;
+    border: none;
+    color: #fff;
+    border-radius: 8px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.login-sReg{
+    border: 0.5px solid #dbdbdb;
+    width: 25%;
+    margin: 10px;
+    height: 50px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* - USER LOGİN + REGİSTER FINISH - */
