--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,44 @@ h3 {
     font-weight: 100;
 }
 
+.user-icon-container {
+    position: relative;
+    display: inline-block;
+}
+
+.user-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    background-color: white;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.user-icon-container:hover .user-menu,
+.user-menu:hover {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+}
+
+.user-menu a {
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+    color: black;
+}
+
+.user-menu a:hover {
+    background-color: #f1f1f1;
+}
+
 /* - HEADER FINISH - */
 
 /* - FOOTER START - */
