--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,23 @@ h3 {
 
 
 /* - HOMEPAGE START - */
+.fade-enter {
+    opacity: 0;
+  }
+  
+  .fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+  }
+  
+  .fade-exit {
+    opacity: 1;
+  }
+  
+  .fade-exit.fade-exit-active {
+    opacity: 0;
+    transition: opacity 500ms ease-out;
+  }
 
 /* - BANNER START - */
 .main-banner {
