--- a/pages/UserDetail/UserDetail.css
+++ b/pages/UserDetail/UserDetail.css
@@ -15,10 +15,6 @@
     gap: 18px;
 }
 
-.user-info-heading {
-    border-bottom: 0.5px solid #000;
-}
-
 .right-side {
     width: 80%;
     display: flex;
@@ -86,9 +82,10 @@
 
 .menu1 {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     gap: 18px;
+    width: 48%;
 }
 
 .membership-info {
@@ -136,6 +133,10 @@
     font-weight: 400;
 }
 
+.user-info-heading{
+    cursor: pointer;
+}
+
 .update-user-info-btn {
     border: 0;
     padding: 12px;
@@ -147,4 +148,27 @@
 
 .update-user-info-btn:hover {
     transform: scale(0.98);
+}
+
+.password-change{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 16px;
+}
+
+.password-change input{
+    width: 100%;
+    height: 42px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    padding: 16px;
+}
+
+.password-change button{
+    border: 0;
+    padding: 12px;
+    border-radius: 8px;
+    background: #ccc;
 }
